maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
    setIndication(x,y-1)}
                 ^